# advent-of-code-2020

./: pyproject.toml
src/aoc/: day1.py  day2.py  day3.py
tests/: test_day1.py  test_day2.py  test_day3.py
