[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "aoc", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
